Backend framework... will need rework to migrate away from wasm base. Client basics, started work on server selector

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,6 +6,24 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-macroquad = { version = "0.4.4", features = ["audio", "log-rs"] }
+# Logging
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+
+# # Singletons
+# lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+
+# Graphics
+macroquad = { version = "0.4.4", features = ["audio"] }
 macroquad-tiled = "0.2.0"
-wasm-sockets = "1.0.0"
+
+# WebSocket
+tungstenite = { version = "0.21.0", features = ["rustls", "rustls-tls-webpki-roots", "rustls-tls-native-roots"] }
+url = { version = "2.5.0", features = ["serde"] }
+# openssl = { version = "0.10.*", features = ["vendored"] }
+
+# Utility
+serde = "1.0.196"
+serde_json = "1.0.113"
+anyhow = "1.0.79"
+directories = "5.0.1"
