--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -27,3 +27,4 @@ serde = "1.0.196"
 serde_json = "1.0.113"
 anyhow = "1.0.79"
 directories = "5.0.1"
+include_dir = { version = "0.7.3", features = [] }
