--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 common = { path = "../common" }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+serde = "1.0.196"
+serde_json = "1.0.113"
 futures = { version = "0.3.30" }
 futures-util = "0.3.30"
 tokio = { version = "1.36.0", features = [ "full" ] }
