--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,13 +6,26 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# Common Structs
 common = { path = "../common" }
+
+# Logging
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+
+# Serialization
 serde = "1.0.196"
 serde_json = "1.0.113"
+
+# Util
 futures = { version = "0.3.30" }
 futures-util = "0.3.30"
+
+# WebSocket Server
 tokio = { version = "1.36.0", features = [ "full" ] }
 tokio-util = { version = "0.7.10", features = [ "compat", "io", "codec" ] }
 tokio-tungstenite = { version = "0.21.0", features = [ "rustls", "rustls-tls-native-roots", "rustls-tls-webpki-roots", "tokio-rustls", "webpki-roots" ] }
+
+# Mongo
+mongodb = { version = "2.8.1" }
+bson = { version = "2.9.0", features = [ "chrono-0_4", "uuid-1", "serde_with" ] }
