--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,6 +13,7 @@ tracing-subscriber = "0.3.18"
 # Graphics
 macroquad = { version = "0.4.4", features = [ "audio" ] }
 macroquad-tiled = "0.2.0"
+macroquad-platformer = "0.2.0"
 glam = { version = "0.25.0", features = [ "serde" ] }
 
 # Server Connection
