--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,11 +20,15 @@ serde_json = "1.0.113"
 # Util
 futures = { version = "0.3.30" }
 futures-util = "0.3.30"
+include_dir = "0.7.3"
 
 # WebSocket Server
 tokio = { version = "1.36.0", features = [ "full" ] }
 tokio-util = { version = "0.7.10", features = [ "compat", "io", "codec" ] }
-tokio-tungstenite = { version = "0.21.0", features = [ "rustls", "rustls-tls-native-roots", "rustls-tls-webpki-roots", "tokio-rustls", "webpki-roots" ] }
+openssl = { version = "0.10.64", features = [ "vendored" ] }
+# tokio-rustls = "0.25.0"
+# rustls-pemfile = "2.1.1"
+#tokio-tungstenite = { version = "0.21.0", features = [ "rustls", "rustls-tls-native-roots", "rustls-tls-webpki-roots", "tokio-rustls", "webpki-roots" ] }
 
 # Mongo
 mongodb = { version = "2.8.1" }
